--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -45,8 +45,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/textView6"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerView">
-
-    </FrameLayout>
+        app:layout_constraintTop_toBottomOf="@+id/recyclerView"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
