--- a/app/src/main/res/layout/activity_carimbo_definitivo.xml
+++ b/app/src/main/res/layout/activity_carimbo_definitivo.xml
@@ -30,7 +30,7 @@
                 app:layout_constraintBottom_toBottomOf="@+id/continuarCarimboDefinitivo"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/continuarCarimboDefinitivo"
-                app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
+                app:srcCompat="@drawable/icon_home" />
 
             <Button
                 android:id="@+id/continuarCarimboDefinitivo"
@@ -360,7 +360,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:ems="10"
-                    android:inputType="textPersonName"
+                    android:inputType="number"
                     android:minHeight="48dp"
                     app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName5"
                     app:layout_constraintHorizontal_bias="0.0"
