--- a/app/src/main/res/layout/activity_furo.xml
+++ b/app/src/main/res/layout/activity_furo.xml
@@ -5,6 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        android:id="@+id/furoIniciarEnsaio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
+        android:text="finalizar furo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <FrameLayout
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
@@ -23,11 +33,10 @@
                 android:id="@+id/textView8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="40dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="30dp"
                 android:text="Profundidade:"
                 app:layout_constraintBottom_toTopOf="@+id/textView9"
-                app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName"
-                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -37,10 +46,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="30dp"
                 android:ems="10"
-                android:inputType="textPersonName"
-                android:text="Name"
+                android:inputType="number"
+                android:text="xx"
                 app:layout_constraintBottom_toBottomOf="@+id/textView8"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/textView8"
                 app:layout_constraintTop_toTopOf="@+id/textView8" />
 
             <ImageButton
@@ -114,9 +124,10 @@
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="29dp"
+                android:layout_marginTop="120dp"
                 android:text="AMOSTRA N"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.463"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -124,10 +135,9 @@
                 android:id="@+id/textView9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="200dp"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="124dp"
                 android:text="Golpes"
-                app:layout_constraintEnd_toStartOf="@+id/textView10"
-                app:layout_constraintHorizontal_bias="0.231"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
@@ -139,6 +149,7 @@
                 android:text="Penetração"
                 app:layout_constraintBottom_toBottomOf="@+id/textView9"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/textView9"
                 app:layout_constraintTop_toTopOf="@+id/textView9"
                 app:layout_constraintVertical_bias="1.0" />
 
@@ -158,11 +169,12 @@
                 android:id="@+id/editTextTextPersonName4"
                 android:layout_width="93dp"
                 android:layout_height="41dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="28dp"
                 android:ems="10"
                 android:hint="15"
                 android:inputType="number"
                 app:layout_constraintEnd_toEndOf="@+id/textView10"
+                app:layout_constraintHorizontal_bias="0.476"
                 app:layout_constraintStart_toStartOf="@+id/textView10"
                 app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
@@ -232,7 +244,7 @@
                 android:layout_marginBottom="313dp"
                 android:ems="10"
                 android:inputType="number"
-                android:text="Name"
+                android:text="xx"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/imageButton9"
                 app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName10" />
@@ -243,11 +255,21 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="16dp"
-                android:text="TextView"
+                android:text="Nível de água"
                 app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName12"
                 app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName12"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName12" />
+
+            <TextView
+                android:id="@+id/textView13"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:text="3 segmentos"
+                app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName11"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName4" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>
