--- a/app/src/main/res/layout/activity_furo.xml
+++ b/app/src/main/res/layout/activity_furo.xml
@@ -15,6 +15,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="50dp"
+        app:layout_constraintBottom_toBottomOf="@+id/furoIniciarEnsaio"
+        app:layout_constraintEnd_toStartOf="@+id/furoIniciarEnsaio"
+        app:layout_constraintTop_toTopOf="@+id/furoIniciarEnsaio"
+        app:srcCompat="@drawable/icon_home" />
+
     <FrameLayout
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
