Layout home adicionado button flutuante

--- a/app/src/main/res/layout/adpter_home_projetos.xml
+++ b/app/src/main/res/layout/adpter_home_projetos.xml
@@ -23,11 +23,11 @@
             tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/nomeDoProjeto"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginTop="8dp"
-            android:text="TextView"
+            android:text="Nome do projeto"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView"
             app:layout_constraintTop_toTopOf="parent" />
@@ -37,7 +37,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginBottom="5dp"
-            android:text="Data de inicio: xx/xx/xxxx"
+            android:text="Inicio do Projeto: xx/xx/xxxx"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -51,6 +51,7 @@
             android:layout_height="match_parent"
             android:layout_marginTop="2dp"
             android:text="Tipo de Ensaio"
+            android:textColor="#FF0909"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -68,7 +69,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/imageView"
-            app:layout_constraintTop_toBottomOf="@+id/textView"
+            app:layout_constraintTop_toBottomOf="@+id/nomeDoProjeto"
             app:layout_constraintVertical_bias="0.122" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
