--- a/app/src/main/res/layout/activity_ensaio.xml
+++ b/app/src/main/res/layout/activity_ensaio.xml
@@ -44,11 +44,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="40dp"
                 android:text="Profundidade:"
-                app:layout_constraintBottom_toTopOf="@+id/textView9"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
             <EditText
                 android:id="@+id/editTextTextPersonName"
@@ -134,10 +133,9 @@
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="120dp"
+                android:layout_marginTop="28dp"
                 android:text="AMOSTRA N"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.463"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -145,8 +143,8 @@
                 android:id="@+id/textView9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="124dp"
+                android:layout_marginStart="64dp"
+                android:layout_marginTop="40dp"
                 android:text="Golpes"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView8" />
@@ -155,10 +153,10 @@
                 android:id="@+id/textView10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="24dp"
                 android:text="Penetração"
                 app:layout_constraintBottom_toBottomOf="@+id/textView9"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.49"
                 app:layout_constraintStart_toEndOf="@+id/textView9"
                 app:layout_constraintTop_toTopOf="@+id/textView9"
                 app:layout_constraintVertical_bias="1.0" />
@@ -167,11 +165,12 @@
                 android:id="@+id/editTextTextPersonName2"
                 android:layout_width="93dp"
                 android:layout_height="41dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="12dp"
                 android:ems="10"
                 android:inputType="number"
                 android:text="Name"
                 app:layout_constraintEnd_toEndOf="@+id/textView9"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/textView9"
                 app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
@@ -179,19 +178,19 @@
                 android:id="@+id/editTextTextPersonName4"
                 android:layout_width="93dp"
                 android:layout_height="41dp"
-                android:layout_marginTop="28dp"
+                android:layout_marginStart="24dp"
                 android:ems="10"
                 android:hint="15"
                 android:inputType="number"
-                app:layout_constraintEnd_toEndOf="@+id/textView10"
-                app:layout_constraintHorizontal_bias="0.476"
-                app:layout_constraintStart_toStartOf="@+id/textView10"
-                app:layout_constraintTop_toBottomOf="@+id/textView10" />
+                app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName2"
+                app:layout_constraintStart_toEndOf="@+id/imageButton3"
+                app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName2" />
 
             <EditText
                 android:id="@+id/editTextTextPersonName9"
                 android:layout_width="93dp"
                 android:layout_height="41dp"
+                android:layout_marginTop="16dp"
                 android:ems="10"
                 android:hint="15"
                 android:inputType="number"
@@ -203,6 +202,7 @@
                 android:id="@+id/editTextTextPersonName11"
                 android:layout_width="93dp"
                 android:layout_height="41dp"
+                android:layout_marginTop="16dp"
                 android:ems="10"
                 android:hint="15"
                 android:inputType="number"
@@ -250,21 +250,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
-                android:layout_marginEnd="7dp"
-                android:layout_marginBottom="313dp"
+                android:layout_marginBottom="250dp"
                 android:ems="10"
                 android:inputType="number"
                 android:text="xx"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/imageButton9"
-                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName10" />
+                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName10"
+                app:layout_constraintVertical_bias="1.0" />
 
             <TextView
                 android:id="@+id/textView11"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="4dp"
                 android:text="Nível de água"
                 app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName12"
                 app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName12"
@@ -275,10 +275,10 @@
                 android:id="@+id/textView13"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp"
+                android:layout_marginStart="10dp"
                 android:text="3 segmentos"
                 app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName11"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName9"
                 app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName4" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
