--- a/app/src/main/res/layout/adapter_projeto.xml
+++ b/app/src/main/res/layout/adapter_projeto.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/textView22"
+            android:id="@+id/textFuroName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Furo N"
