Modificação do botão home, de imageView para imageButton

--- a/app/src/main/res/layout/activity_ensaio.xml
+++ b/app/src/main/res/layout/activity_ensaio.xml
@@ -15,11 +15,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <ImageView
+    <ImageButton
         android:id="@+id/imageButtonHome"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="50dp"
+        android:backgroundTint="#00FFFFFF"
+        android:minHeight="48dp"
         app:layout_constraintBottom_toBottomOf="@+id/buttonFinalizarFuro"
         app:layout_constraintEnd_toStartOf="@+id/buttonFinalizarFuro"
         app:layout_constraintTop_toTopOf="@+id/buttonFinalizarFuro"
