--- a/app/src/main/res/layout/acitivity_furo.xml
+++ b/app/src/main/res/layout/acitivity_furo.xml
@@ -9,7 +9,6 @@
         android:id="@+id/imageButton20"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#00FFFFFF"
         app:layout_constraintBottom_toBottomOf="@+id/imprimir"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imprimir"
@@ -21,10 +20,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:background="#00FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imprimir"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerAmostras"
         app:srcCompat="@android:drawable/ic_menu_add" />
 
     <Button
